hphp/test/slow/coeffects/ctx-const-in-type-structure.php.expectf
Fatal error: Non-existent type constant A::C in %s on line 9
